--- a/calls/index.html
+++ b/calls/index.html
@@ -333,6 +333,99 @@
 						</svg>				
 					</div>
 				</div>
+				<div class="controls__filter filter">
+					<div class="controls-mobile__filter-btn controls__filter-btn ">
+						<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<g clip-path="url(#clip0)">
+							<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+							<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+							</g>
+						</svg>	
+					</div>	
+					<div class="controls-mobile__filter-lists controls__filter-lists drop-list">
+						<ul class="controls__filter-list controls__filter-list_bordered">
+							<li class="drop-list__item controls__filter-item-wrapper">
+								<label class="controls-mobile__filter-item controls__filter-item">All
+									<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+									<span class="filter-item__checkmark"></span>
+								</label>	 
+							</li>
+							<li class="drop-list__item controls__filter-item-wrapper">
+								<label class="controls-mobile__filter-item controls__filter-item">Service call
+									<input class="filter-item__checkbox" type="checkbox">
+									<span class="filter-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__filter-item-wrapper">
+								<label class="controls-mobile__filter-item controls__filter-item">Recall
+									<input class="filter-item__checkbox" type="checkbox">
+									<span class="filter-item__checkmark"></span>
+								</label>
+							</li>
+
+						</ul>
+						<ul class="controls__filter-list">
+							<li class="drop-list__item controls__filter-item-wrapper ">
+								<label class="controls-mobile__filter-item controls__filter-item">All
+									<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
+									<span class="filter-item__checkmark"></span>
+								</label>	 
+							</li>
+							<li class="drop-list__item controls__filter-item-wrapper">
+								<label class="controls-mobile__filter-item controls__filter-item">Service call
+									<input class="filter-item__checkbox" type="checkbox">
+									<span class="filter-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__filter-item-wrapper">
+								<label class="controls-mobile__filter-item controls__filter-item">Recall
+									<input class="filter-item__checkbox" type="checkbox">
+									<span class="filter-item__checkmark"></span>
+								</label>
+							</li>
+
+						</ul>
+						<div class="controls__filter-apply">
+							<button class="controls-mobile__filter-btn-apply controls__filter-btn-apply">
+								Apply
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="controls__tags tags">
+					<div class="controls-mobile__tags-btn controls__tags-btn">
+						<svg viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M3 1 L2 10
+								M6 1 L5 10
+								M0 4 L8 4 M0 7 L8 7" stroke-linecap="round" stroke-linejoin="round"></path>
+						</svg>
+					</div>	
+					<ul class="controls-mobile__tags-list controls__tags-list drop-list">
+						<li class="drop-list__item controls__tags-item-wrapper ">
+							<label class="controls-mobile__tags-item controls__tags-item">All
+								<input class="tags-item__checkbox tags-item__checkbox_all" type="checkbox" checked>
+								<span class="tags-item__checkmark"></span>
+							</label>	 
+						</li>
+						<li class="drop-list__item controls__tags-item-wrapper">
+							<label class="controls-mobile__tags-item controls__tags-item">Service call
+								<input class="tags-item__checkbox" type="checkbox">
+								<span class="tags-item__checkmark"></span>
+							</label> 
+						</li>
+						<li class="drop-list__item controls__tags-item-wrapper">
+							<label class="controls-mobile__tags-item controls__tags-item">Recall
+								<input class="tags-item__checkbox" type="checkbox">
+								<span class="tags-item__checkmark"></span>
+							</label>
+						</li>
+						<li class="controls__tags-apply">
+							<button class="controls-mobile__tags-btn-apply controls__tags-btn-apply">
+								Apply
+							</button>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</section>
 
