--- a/calls/area.html
+++ b/calls/area.html
@@ -132,49 +132,99 @@
 							 M0 4 L8 4 M0 7 L8 7" stroke-linecap="round" stroke-linejoin="round"></path>
 						</svg>
 					</div>	
-					<ul class="controls__tags-list drop-list">
-						<li class="drop-list__item controls__tags-item-wrapper ">
-							<label class="controls__tags-item">All
-								<input class="tags-item__checkbox tags-item__checkbox_all" type="checkbox" checked>
-								<span class="tags-item__checkmark"></span>
-							</label>	 
-						</li>
-						<li class="drop-list__item controls__tags-item-wrapper">
-							<label class="controls__tags-item">Service call
-								<input class="tags-item__checkbox" type="checkbox">
-								<span class="tags-item__checkmark"></span>
-							</label> 
-						</li>
-						<li class="drop-list__item controls__tags-item-wrapper">
-							<label class="controls__tags-item">Recall
-								<input class="tags-item__checkbox" type="checkbox">
-								<span class="tags-item__checkmark"></span>
-							</label>
-						</li>
-						<li class="controls__tags-apply">
+					<div class="controls__tags-list drop-list">
+						<ul class="controls__tags-items">
+							<li class="drop-list__item controls__tags-item-wrapper ">
+								<label class="controls__tags-item">All
+									<input class="tags-item__checkbox tags-item__checkbox_all" type="checkbox" checked>
+									<span class="tags-item__checkmark"></span>
+								</label>	 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Service call
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label> 
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+							<li class="drop-list__item controls__tags-item-wrapper">
+								<label class="controls__tags-item">Recall
+									<input class="tags-item__checkbox" type="checkbox">
+									<span class="tags-item__checkmark"></span>
+								</label>
+							</li>
+						</ul>
+						<div class="controls__tags-apply">
 							<button class="controls__tags-btn-apply">
 								Apply
 							</button>
-						</li>
-					</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="controls__item">
-				<div class="controls__date-settings">
-					<div class="controls__date-view">
-						<p class="controls__date-view-text">Calls</p>
-						<div class="controls__date-view-arrow">
+				<div class="controls__settings">
+					<div class="controls__table-select">
+						<p class="controls__table-select-text">Calls</p>
+						<div class="controls__table-select-arrow">
 							<svg width="16" height="7" viewBox="0 0 16 7" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<rect x="0.612244" y="0.0039978" width="10" height="1" rx="0.5" transform="rotate(37.7521 0.612244 0.0039978)" fill="black"/>
 								<rect x="15.7245" y="0.791351" width="10" height="1" rx="0.5" transform="rotate(142.313 15.7245 0.791351)" fill="black"/>
 							</svg>
 									
 						</div>
-						<ul class="controls__date-view-list date-view-list drop-list">
-							<li class="drop-list__item date-view-list__item selected">Calls</li>
-							<li class="drop-list__item date-view-list__item">Numbers</li>
-							<li class="drop-list__item date-view-list__item">Source</li>
-							<li class="drop-list__item date-view-list__item">Area</li>
+						<ul class="controls__table-select-list table-select-list drop-list">
+							<li class="drop-list__item table-select-list__item selected">Calls</li>
+							<li class="drop-list__item table-select-list__item">Numbers</li>
+							<li class="drop-list__item table-select-list__item">Source</li>
+							<li class="drop-list__item table-select-list__item">Area</li>
 						</ul>
 					</div>
 					<div class="controls__date-period date-period ">
@@ -204,8 +254,6 @@
 						</ul>
 					</div>
 				</div>
-				
-
 				<div class="controls__date-picker">
 					<div class="controls__date-picker-item controls__date-picker-item_start">
 						<p class="controls__date-picker-date controls__date-picker-date_start">
@@ -494,7 +542,7 @@
 						</svg>
 					</div>
 					<p class="table-navigation-mobile__sort-text">
-						Date
+						Area
 					</p>
 					<div class="table-navigation-mobile__sort-btn">
 						<svg width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
