--- a/calls/numbers.html
+++ b/calls/numbers.html
@@ -160,21 +160,21 @@
 				</div>
 			</div>
 			<div class="controls__item">
-				<div class="controls__date-settings">
-					<div class="controls__date-view">
-						<p class="controls__date-view-text">Calls</p>
-						<div class="controls__date-view-arrow">
+				<div class="controls__settings">
+					<div class="controls__table-select">
+						<p class="controls__table-select-text">Calls</p>
+						<div class="controls__table-select-arrow">
 							<svg width="16" height="7" viewBox="0 0 16 7" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<rect x="0.612244" y="0.0039978" width="10" height="1" rx="0.5" transform="rotate(37.7521 0.612244 0.0039978)" fill="black"/>
 								<rect x="15.7245" y="0.791351" width="10" height="1" rx="0.5" transform="rotate(142.313 15.7245 0.791351)" fill="black"/>
 							</svg>
 									
 						</div>
-						<ul class="controls__date-view-list date-view-list drop-list">
-							<li class="drop-list__item date-view-list__item selected">Calls</li>
-							<li class="drop-list__item date-view-list__item">Numbers</li>
-							<li class="drop-list__item date-view-list__item">Source</li>
-							<li class="drop-list__item date-view-list__item">Area</li>
+						<ul class="controls__table-select-list table-select-list drop-list">
+							<li class="drop-list__item table-select-list__item selected">Calls</li>
+							<li class="drop-list__item table-select-list__item">Numbers</li>
+							<li class="drop-list__item table-select-list__item">Source</li>
+							<li class="drop-list__item table-select-list__item">Area</li>
 						</ul>
 					</div>
 					<div class="controls__date-period date-period ">
@@ -204,8 +204,6 @@
 						</ul>
 					</div>
 				</div>
-				
-
 				<div class="controls__date-picker">
 					<div class="controls__date-picker-item controls__date-picker-item_start">
 						<p class="controls__date-picker-date controls__date-picker-date_start">
@@ -494,7 +492,7 @@
 						</svg>
 					</div>
 					<p class="table-navigation-mobile__sort-text">
-						Date
+						Number
 					</p>
 					<div class="table-navigation-mobile__sort-btn">
 						<svg width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
